# orchid-ranker

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  RELEASING.md  ROADMAP.md  SERIALIZATION_USAGE.md  TECHNICAL_REVIEW.md  mkdocs.yml  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yaml  nightly-bench.yml  release.yml  security.yml
benchmarks/: adaptive_efficiency_benchmark.py  adaptive_latency.py  adaptive_vs_static_assistments.py  bench_competitors.py  bench_infer.py  bench_strategies.py  check_regression.py  cold_start_bench.py  compare_implicit.py  compare_reclab.py  compare_surprise.py  curated_feed_bench.py  delayed_gain_model_benchmark.py  end_to_end_bench.py  eval_implicit.py  kt_policy_ope_benchmark.py  kt_sakt_benchmark.py  profile_strategies.py  results_adaptive_efficiency_assistments.json  results_cold_start.json  results_curated_feed.json  results_delayed_gain_model_assistments_target095.json  results_end_to_end.json  results_kt_assistments_akt.json  results_kt_assistments_sakt.json  results_kt_assistments_smoke.json  results_kt_policy_ope_assistments_akt.json  results_kt_policy_ope_assistments_akt_sweep.json  results_kt_policy_ope_assistments_akt_target09.json  results_kt_policy_ope_assistments_akt_target09_sweep.json  results_kt_policy_ope_assistments_delayed_gain_policy_target095_sweep.json  results_kt_policy_ope_assistments_delayed_gain_sweep.json  results_kt_policy_ope_assistments_delayed_gain_target095_sweep.json  results_kt_policy_ope_assistments_delayed_gain_target09_sweep.json  results_kt_policy_ope_assistments_progression_sweep.json  results_kt_policy_ope_assistments_support_delayed_gain_calibrated_seed11.json  results_kt_policy_ope_assistments_support_delayed_gain_target095_sweep.json  results_kt_policy_ope_assistments_support_delayed_gain_weighted_seed11.json  results_kt_policy_ope_smoke.json  results_scaling.json  (+7 more)
benchmarks/amazon_reviews/: download.py  preprocess.py
benchmarks/assistments/: __init__.py  download.py  preprocess.py
benchmarks/ednet/: __init__.py  preprocess.py
benchmarks/fixtures/: assistments_tiny_raw.csv  ednet_tiny_kt1.csv  ednet_tiny_questions.csv  generate_fixture.py  item_features.npy  test.csv  train.csv
benchmarks/mind/: download.py  preprocess.py
benchmarks/movielens_1m/: baselines.py  download.py  preprocess.py  run.py  simulator.py
benchmarks/music/: baselines.py  download.py  preprocess.py  run.py  simulator.py
benchmarks/tmp_data/: test.csv  train.csv
configs/: config.yaml  ednet.yaml  oulad.yaml  sample_dataset.yaml
deploy/: docker-compose.yml  prometheus.yml
deploy/grafana/: orchid-ranker-dashboard.json
deploy/terraform/: README.md
docs/: README.md  adaptive-learning-positioning.md  adaptive-recommender-literature.md  algorithm-roadmap.md  api_reference.md  api_support_policy.md  application-scenarios.md  benchmarking.md  benchmarking_results.md  brainstorm-notes.md  capacity_planning.md  coding-standards.md  competitive-brief.md  competitors.md  connectors_deployment.md  contributing.md  core-vs-specialty.md  deployment.md  enterprise_baseline_assessment.md  enterprise_readiness_plan.md  enterprise_runbook.md  examples.md  index.md  offline-policy-evaluation.md  overview.md  performance_playbook.md  privacy.md  progression-policy.md  pykt-integration.md  quickstart.md  scenarios.md  security.md  security_walkthrough.md  tutorial_data_ingestion.md  tutorial_dp.md  tutorial_observability.md  tutorial_pc_eb.md  tutorial_safe_mode.md  tutorial_serialization.md  why-orchid.md
docs/benchmarks/: assistments-kt.md  cold-start.md  credibility.md  curated-feed.md  ednet.md  end-to-end.md  kt-policy-ope.md  movielens-1m.md  music.md  oulad.md  scaling.md  taste-progression.md
docs/blog/: adaptive-progression-recommendation.md
docs/compliance/: data_retention.md  ferpa_gdpr_alignment.md  incident_response.md
docs/customer_success/: design_partner_pilot.md  faq.md  onboarding_playbook.md  solutions_engineering_rotation.md  support_sla.md
docs/gtm/: blog_template.md  license_notes.md  messaging_one_pager.md
docs/guides/: 01-fit-offline.md  02-serve-streaming.md  03-operate-safely.md  migration-0.4-to-0.5.md
docs/migration/: legacy_orchestrator.md
docs/security/: third_party_pen_test.md  threat_model.md
docs/tutorials/: library_walkthrough.md  pc_eb.ipynb  safe_mode.ipynb
examples/: adaptive_learning_quickstart.py  adaptive_learning_use_cases.py  akt_quickstart.py  custom_guardrail.py  kafka_integration.py  knowledge_tracing_quickstart.py  kt_policy_quickstart.py  movielens_demo.py  offline_policy_evaluation_quickstart.py  progression_policy_quickstart.py  pykt_bridge_quickstart.py  quickstart.py  scenario_selection.py
examples/notebooks/: README.md  pilot_quickstart.ipynb
experiments/: __init__.py  agentic_run.yaml  plot_engagement.py  test_student.py
runs/: agentic-smoke.jsonl
scripts/: bump_version.sh  ci_safe_smoke.sh  run_all_demos.sh  run_apples_to_apples.sh  run_full_tests.sh  run_ml100k_safe_smoke.sh  ship_audit_logs.py
tests/: conftest.py  test_adaptive_algorithm_collection.py  test_adaptive_learning_recommender.py  test_adaptive_ranker_roadmap.py  test_agent_modules.py  test_agentic_ml100k.py  test_agentic_smoke.py  test_assistments_preprocess.py  test_baselines_extended.py  test_cold_start.py  test_comprehensive_coverage.py  test_concurrency.py  test_connector_integration.py  test_connectors.py  test_curated_feed.py  test_curriculum.py  test_data_loader.py  test_documentation_readiness.py  test_dp.py  test_dp_correctness.py  test_dp_extended.py  test_e2e.py  test_edge_cases.py  test_ednet_preprocess.py  test_educational_metrics.py  test_evaluate_cli.py  test_evaluation_extended.py  test_irt.py  test_knowledge_tracing.py  test_kt_benchmark_policy.py  test_live_metrics.py  test_metrics.py  test_model_selection.py  test_native_scoring.py  test_observability.py  test_ope.py  test_progression_reward_policy.py  test_publish_readiness.py  test_pykt_bridge.py  test_quickstart_integration.py  (+23 more)
(+122 files in other folders)
