[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orchid-ranker"
version = "0.2.1"
description = "Adaptive educational recommender toolkit with learner simulators, agentic orchestration, and preprocessing utilities."
readme = "README.md"
authors = [
  {name = "Farhad Vadiee", email = "sam.vadiee@gmail.com"}
]
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.22",
  "pandas>=1.5",
  "scikit-learn>=1.1",
  "scipy>=1.9",
  "pyyaml>=6.0",
  "joblib>=1.2",
  "torch>=1.13",
]
keywords = ["recommender-systems", "education", "privacy", "bandits", "simulation"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Education",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Education",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]

[project.optional-dependencies]
viz = [
  "matplotlib>=3.6",
]
agentic = [
  "matplotlib>=3.6",
  "tqdm>=4.60",
  "opacus>=1.5",
]
observability = [
  "prometheus-client>=0.16",
]
connectors = [
  "snowflake-connector-python>=3.0",
  "google-cloud-bigquery>=3.11",
  "boto3>=1.28",
  "mlflow>=2.14",
]
benchmarks = [
  "implicit>=0.7",
  "reclab>=0.2",
]
dev = [
  "pytest>=7.0",
  "mypy>=1.4",
  "ruff>=0.1.5",
  "build>=1.0",
  "twine>=4.0",
  "prometheus-client>=0.16",
]

[project.urls]
Homepage = "https://github.com/farhad-vadiee/orchid-ranker"
Source = "https://github.com/farhad-vadiee/orchid-ranker"
Documentation = "https://github.com/farhad-vadiee/orchid-ranker/tree/main/docs"
Changelog = "https://github.com/farhad-vadiee/orchid-ranker/blob/main/CHANGELOG.md"
Issues = "https://github.com/farhad-vadiee/orchid-ranker/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["orchid_ranker", "orchid_ranker.*"]

[project.scripts]
orchid-evaluate = "orchid_ranker.cli.evaluate:main"

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
