[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orchid-ranker"
version = "0.3.2"
description = "Adaptive progression and recommender toolkit with user simulators, agentic orchestration, and offline evaluation."
readme = "README.md"
authors = [
  {name = "Sam Urmian", email = "sam.urmian@gmail.com"}
]
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.22",
  "pandas>=1.5",
  "scikit-learn>=1.1",
  "scipy>=1.9",
  "pyyaml>=6.0",
  "joblib>=1.2",
]
keywords = ["recommender-systems", "adaptive-learning", "knowledge-tracing", "bandits", "simulation", "progression"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Education",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Education",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]

[project.optional-dependencies]
ml = [
  "torch>=1.13,<3",
]
torch = [
  "torch>=1.13,<3",
]
viz = [
  "matplotlib>=3.6,<4",
]
agentic = [
  "torch>=1.13,<3",
  "matplotlib>=3.6,<4",
  "tqdm>=4.60,<5",
  "opacus>=1.5,<2",
]
observability = [
  "prometheus-client>=0.16,<1",
]
connectors = [
  "snowflake-connector-python>=3.0,<4",
  "google-cloud-bigquery>=3.11,<4",
  "boto3>=1.28,<2",
  "mlflow>=2.14,<3",
]
benchmarks = [
  "implicit>=0.7,<1",
  "reclab>=0.2,<1",
  "scikit-surprise>=1.1,<2",
  "lightfm>=1.17,<2",
]
dev = [
  "torch>=1.13,<3",
  "pytest>=7.0,<9",
  "pytest-cov>=4.0,<6",
  "mypy>=1.4,<2",
  "ruff>=0.1.5,<1",
  "build>=1.0,<2",
  "twine>=4.0,<6",
  "prometheus-client>=0.16,<1",
]
all = [
  "orchid-ranker[ml,viz,agentic,observability,connectors]",
]

[project.urls]
Homepage = "https://github.com/mlgorithm/orchid-ranker"
Source = "https://github.com/mlgorithm/orchid-ranker"
Documentation = "https://github.com/mlgorithm/orchid-ranker/tree/main/docs"
Changelog = "https://github.com/mlgorithm/orchid-ranker/blob/main/CHANGELOG.md"
Issues = "https://github.com/mlgorithm/orchid-ranker/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["orchid_ranker", "orchid_ranker.*"]

[project.scripts]
orchid-evaluate = "orchid_ranker.cli.evaluate:main"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "E402", "E701", "E702", "E741"]

[tool.ruff.lint.per-file-ignores]
"src/orchid_ranker/__init__.py" = ["F822"]
"src/orchid_ranker/agents/__init__.py" = ["F822"]
"src/orchid_ranker/agents/student_agent.py" = ["F822"]
"src/orchid_ranker/curriculum.py" = ["F822"]
"src/orchid_ranker/evaluation.py" = ["F822"]
"src/orchid_ranker/knowledge_tracing.py" = ["F822"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
