[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orchid-ranker"
version = "0.5.0"
description = "Adaptive-learning engine with learner-state tracing, progression reward, prerequisites, and safe rollout."
readme = "README.md"
authors = [
  {name = "Sam Urmian", email = "sam.urmian@gmail.com"}
]
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.11,<3.14"
dependencies = [
  "numpy>=1.23.5",
  "pandas>=1.5.3",
  "scikit-learn>=1.2",
  "scipy>=1.9.3",
  "pyyaml>=6.0",
  "joblib>=1.2",
]
keywords = [
  "adaptive-learning",
  "learner-state",
  "knowledge-tracing",
  "progression-reward",
  "prerequisites",
  "learning-analytics",
  "adaptive-recommendation",
  "safe-rollout",
  "recommender-systems",
  "bandits",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]

[project.optional-dependencies]
adaptive = [
  "torch>=2.0,<3",
]
offline_rl = [
  "torch>=2.0,<3",
]
bandits = [
  "torch>=2.0,<3",
]
sketch = [
  "numpy>=1.23.5",
]
privacy = [
  "opacus>=1.5,<2",
  "PyJWT[crypto]>=2.8,<3",
]
legacy = [
  "torch>=2.0,<3",
  "implicit>=0.7,<1",
]
ml = [
  "torch>=2.0,<3",
]
implicit = [
  "torch>=2.0,<3",
  "implicit>=0.7,<1",
]
torch = [
  "torch>=2.0,<3",
]
viz = [
  "matplotlib>=3.6,<4",
]
docs = [
  "mkdocs>=1.5,<2",
  "mkdocs-material>=9.5,<10",
  "mkdocstrings[python]>=0.24,<1",
  "pymdown-extensions>=10,<11",
]
streaming = [
  "torch>=2.0,<3",
  "confluent-kafka>=2.1,<3",
]
enterprise = [
  "torch>=2.0,<3",
  "opacus>=1.5,<2",
  "prometheus-client>=0.16,<1",
  "PyJWT[crypto]>=2.8,<3",
]
auth = [
  "PyJWT[crypto]>=2.8,<3",
]
agentic = [
  "torch>=2.0,<3",
  "matplotlib>=3.6,<4",
  "tqdm>=4.60,<5",
  "opacus>=1.5,<2",
]
observability = [
  "prometheus-client>=0.16,<1",
  "opentelemetry-api>=1.24,<2",
  "opentelemetry-sdk>=1.24,<2",
  "opentelemetry-exporter-otlp>=1.24,<2",
]
connectors = [
  "snowflake-connector-python>=3.0,<4",
  "google-cloud-bigquery>=3.11,<4",
  "boto3>=1.28,<2",
  "mlflow>=2.14,<3",
]
benchmarks = [
  "torch>=2.0,<3",
  "pandas>=1.5.3",
  "matplotlib>=3.6,<4",
  "tqdm>=4.60,<5",
  "implicit>=0.7,<1",
]
dev = [
  "torch>=2.0,<3",
  "pytest>=7.0,<9",
  "pytest-cov>=4.0,<6",
  "mypy>=1.4,<2",
  "ruff>=0.1.5,<1",
  "types-PyYAML>=6.0,<7",
  "mkdocs>=1.5,<2",
  "mkdocs-material>=9.5,<10",
  "mkdocstrings[python]>=0.24,<1",
  "pymdown-extensions>=10,<11",
  "build>=1.0,<2",
  "twine>=6.0,<7",
  "prometheus-client>=0.16,<1",
]
all = [
  "torch>=2.0,<3",
  "implicit>=0.7,<1",
  "matplotlib>=3.6,<4",
  "mkdocs>=1.5,<2",
  "mkdocs-material>=9.5,<10",
  "mkdocstrings[python]>=0.24,<1",
  "pymdown-extensions>=10,<11",
  "confluent-kafka>=2.1,<3",
  "opacus>=1.5,<2",
  "prometheus-client>=0.16,<1",
  "PyJWT[crypto]>=2.8,<3",
  "opentelemetry-api>=1.24,<2",
  "opentelemetry-sdk>=1.24,<2",
  "opentelemetry-exporter-otlp>=1.24,<2",
  "snowflake-connector-python>=3.0,<4",
  "google-cloud-bigquery>=3.11,<4",
  "boto3>=1.28,<2",
  "mlflow>=2.14,<3",
  "tqdm>=4.60,<5",
]

[project.urls]
Homepage = "https://github.com/mlgorithm/orchid-ranker"
Source = "https://github.com/mlgorithm/orchid-ranker"
Documentation = "https://github.com/mlgorithm/orchid-ranker/tree/main/docs"
Changelog = "https://github.com/mlgorithm/orchid-ranker/blob/main/CHANGELOG.md"
Issues = "https://github.com/mlgorithm/orchid-ranker/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
orchid_ranker = ["py.typed", "native/*.cpp"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["orchid_ranker", "orchid_ranker.*"]

[project.scripts]
orchid-evaluate = "orchid_ranker.cli.evaluate:main"
orchid-serve = "orchid_ranker.cli.serve:main"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "E402", "E701", "E702", "E741"]

[tool.ruff.lint.per-file-ignores]
"src/orchid_ranker/__init__.py" = ["F822"]
"src/orchid_ranker/agents/__init__.py" = ["F822"]
"src/orchid_ranker/agents/student_agent.py" = ["F822"]
"src/orchid_ranker/curriculum.py" = ["F822"]
"src/orchid_ranker/evaluation.py" = ["F822"]
"src/orchid_ranker/knowledge_tracing.py" = ["F822"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "orchid_ranker.adaptive_learning",
  "orchid_ranker.adaptive_ranker",
  "orchid_ranker.agents.*",
  "orchid_ranker.baselines",
  "orchid_ranker.calibration",
  "orchid_ranker.cli.evaluate",
  "orchid_ranker.cold_start",
  "orchid_ranker.connectors.*",
  "orchid_ranker.contrib.*",
  "orchid_ranker.curriculum",
  "orchid_ranker.data.*",
  "orchid_ranker.delayed_gain",
  "orchid_ranker.experiments.*",
  "orchid_ranker.learning_policy",
  "orchid_ranker.native.fast_score",
  "orchid_ranker.offline_policy",
  "orchid_ranker.security.audit",
  "orchid_ranker.streaming",
  "orchid_ranker.taste_progression",
]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
